check if phone number has been used
